Лаб 4/tests/semantic_errors/error1_undeclared_variables.listlang
result = x + y;
write(result);